lexer_parser/src/test/exempleFile/miniJaja/success/methFull.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methFull{

    int myMeth(int x, boolean y){
        int a = 5;
        x++;
        y = false; 
        return x;
    };

	main {

	}
}