lexer_parser/src/test/exempleFile/miniJaja/fail/methMissingArgs.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methMissingArgs{

    int myMeth{
        int a = 5;
        x++;
        y = false; 
        return x;
    };

	main {

	}
}